syntax = "proto3";

package common;

message Timestamp {
  int64 seconds = 1;
  uint32 nanos = 2;
}

message Uuid {
  uint64 most_significant = 1;
  uint64 least_significant = 2;
}

enum HashAlgorithm {
  TENT = 0;
  BLAKE_3 = 1;
  XXH3 = 2;
}

message Hash {
  HashAlgorithm algo = 1;
  bytes value = 2;
}

message FixedSpecs {
  common.Uuid vbd_id = 1;
  uint32 cluster_size = 2;
  uint32 block_size = 3;
  HashAlgorithm content_hash = 4;
  HashAlgorithm meta_hash = 5;
}

message Compression {
  message Zstd {}

  oneof type {
    Zstd zstd = 1;
  }
}

message Compressed {
  Compression compression = 1;
  uint64 uncompressed = 2;
}

message Cluster {
  common.Hash cid = 1;
  repeated common.Hash block_ids = 2;
}

message Index {
  common.Hash cid = 1;
  repeated common.Hash cluster_ids = 2;
}

message Commit {
  common.Hash cid = 1;
  common.Hash preceding_cid = 2;
  common.Timestamp committed = 3;
  common.Hash index_id = 4;
  uint64 clusters = 5;
}